Issue #SB-7821 fix : Assessments - Scroll Bar while bundling questions not visible

--- a/editor/style.css
+++ b/editor/style.css
@@ -86,7 +86,7 @@
     padding-top: 2.3% !important;
 }
 
-.qb-question-bank .content.wizard {
+.qb-question-bank .content.wizard, .questionSetDiv {
     height: 80vh;
     padding: 0;
     overflow-y: auto;
